# adventofcode

./: .gitignore  justfile  template.c
2015/day01/: solve.c
2015/day05/: solve.c
2017/day01/: solve.c
2018/day03/: README.md
2018/day03/src/: main.rs
2019/day16/: solve.rs
2021/day02/: solve.rs
2021/day04/: solve.rs
2021/day1/: solve.rs
2021/day3/: 3.rs
2021/day4/: solve.rs
2021/day5/: solve.rs
2021/day6/: solve.rs
2022/day01/: solve.rs
2022/day02/: solve.rs
2022/day03/: solve.rs
2022/day04/: solve.rs
2022/day05/: solve.rs
2022/day06/: solve.rs
2022/day07/: solve.py
2022/day08/: solve.rs
2022/day09/: solve.rs
2022/day10/: solve.rs
2022/day11/: solve.rs
2022/day12/: solve.rs
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day16/: Cargo.toml  example_5
2022/day17/: Cargo.toml
2022/day19/: Cargo.toml
2022/day19/src/: main.rs  original.rs
2022/day24/: Cargo.toml
2022/day25/: Cargo.toml
2023/day04/: Cargo.toml
2023/day05/: Cargo.toml
2023/day06/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml  answers
2023/day13/: answers  example_10  example_11  example_2  example_5  example_6  example_7  example_8  example_9
2023/day14/: Cargo.toml
2023/day16/: Cargo.toml  answers
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml
2023/day24/: Cargo.toml  README.md  part2.ipynb  test2.sage
2024/day03/: example_1
2024/day13/: Cargo.toml
2024/day14/: Cargo.toml
2024/day18/: Cargo.toml
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day25/: main.hs
templates/rust/: solve.rs
(+50 files in other folders)
