[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.1"
lru = "0.8.1"
memoize = { version = "0.3.3", features = ["full"] }
nom = "7.1.1"
rayon = "1.6.1"
